# stratum-observer

./: .gitignore  Cargo.toml  README.md  config-example.toml  config.toml.example  shell.nix
.github/workflows/: rust.yml
migrations/2024-05-13-000000_create_jobupdates/: down.sql  up.sql
src/: client.rs  config.rs  main.rs  schema.rs  types.rs  utils.rs
www/: index.html
