[package]
name = "stratum-observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sv1_api = "1.0.0"
async-std="1.8.0"
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
async-channel = "1.5.1"
log = "0.4.21"
toml = "0.8.12"
env_logger = "0.11.3"
bitcoin = "0.32.0"
chrono = "0.4.38"
diesel = { version = "2.1.6", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
tungstenite = "0.21.0"
async-broadcast = "0.7.0"
